[gd_scene load_steps=11 format=3 uid="uid://dqed3ink2ovfi"]

[ext_resource type="Texture2D" uid="uid://cx1ivjobggp8n" path="res://assets/art/sprites/rogues.png" id="1_fmv3f"]
[ext_resource type="Script" uid="uid://cuy3t0moq4it4" path="res://scenes/unit/unit.gd" id="1_fvc8g"]
[ext_resource type="Material" uid="uid://bb8m5fhpi4wqn" path="res://assets/shaders/2d_outline_shader.tres" id="2_vgvef"]
[ext_resource type="Script" uid="uid://qok7vhvypuam" path="res://scripts/components/drag_and_drop.gd" id="3_vh40f"]
[ext_resource type="Script" uid="uid://clrp65f1y4tut" path="res://scripts/components/velocity_based_rotation.gd" id="4_bhlit"]
[ext_resource type="Script" uid="uid://c0stwba0llb42" path="res://scripts/components/outline_highlighter.gd" id="6_3po7s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fmv3f"]
size = Vector2(36, 36)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fmv3f"]
bg_color = Color(0.231373, 0.113725, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fvc8g"]
bg_color = Color(0, 0.733333, 0.364706, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.231373, 0.113725, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vh40f"]
bg_color = Color(0, 0.654902, 0.937255, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.231373, 0.113725, 0.0980392, 1)

[node name="Unit" type="Area2D"]
script = ExtResource("1_fvc8g")

[node name="Visuals" type="CanvasGroup" parent="."]
material = ExtResource("2_vgvef")

[node name="Skin" type="Sprite2D" parent="Visuals"]
texture = ExtResource("1_fmv3f")
offset = Vector2(16, 8)
region_enabled = true
region_rect = Rect2(32, 96, 32, 32)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16, 8)
shape = SubResource("RectangleShape2D_fmv3f")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 1.0
offset_top = -21.0
offset_right = 31.0
offset_bottom = -15.0
theme_override_styles/background = SubResource("StyleBoxFlat_fmv3f")
theme_override_styles/fill = SubResource("StyleBoxFlat_fvc8g")
value = 50.0
show_percentage = false

[node name="ManaBar" type="ProgressBar" parent="."]
offset_left = 1.0
offset_top = -15.0
offset_right = 31.0
offset_bottom = -11.0
theme_override_styles/background = SubResource("StyleBoxFlat_fmv3f")
theme_override_styles/fill = SubResource("StyleBoxFlat_vh40f")
value = 60.0
show_percentage = false

[node name="DragAndDrop" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("3_vh40f")
target = NodePath("..")

[node name="VelocityBasedRotation" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("4_bhlit")
target = NodePath("..")

[node name="OutlineHighlighter" type="Node" parent="." node_paths=PackedStringArray("target")]
script = ExtResource("6_3po7s")
target = NodePath("../Visuals")
outline_thickness = 2
